# link-shortener-bakeoff

./: .gitignore  .tool-versions  LICENSE  Pipfile  README.md
bench-go-core/: go.mod  main.go
bench-go-core/results/: results.csv
bench-rust-core/: Cargo.toml
bench-rust-core/src/: main.rs
plots/: plot.py
results/: sample_go.json  sample_rust.json
scripts/: analyze.py  env.sh  gen_workload.py  run_all.sh
spec/: benchmark.md  results_schema.md
