[package]
name = "bench-rust-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-rust-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
hostname = "0.4"

